# laamtag-modern

./: .gitignore  .railwayignore  Dockerfile  README.md  audit-collection.ts  cache.json  check-cm.mjs  config.json  next.config.cjs  next.config.js  next.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.json  validate_errors.json
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json
anchor/programs/anchor/: Cargo.toml
anchor/programs/anchor/src/: lib.rs
assets/: 0.json  collection.json
prisma/: mock-submission.ts  schema.prisma  seed.ts
public/: laamtag.apk  manifest.json  sw.js
public/.well-known/: assetlinks.json
scripts/: createCollection.ts  export-wallets-list.ts  fix-ranks.ts  getAuthority.ts  import-csv.ts  verifyCollection.ts
src/components/: ActivityTicker.tsx  AppFooter.tsx  Arena.tsx  ArmoryBattleField.tsx  BadgeGallery.tsx  BattleField.tsx  BattleFieldWarriorTimer.tsx  BoxModal.tsx  ClaimBadge.tsx  Collectable.tsx  DiceTerminal.tsx  DomainLookup.tsx  DomainRegister.tsx  EnvDebug.tsx  GuessGame.tsx  HistoryModal.tsx  LaamDirectory.tsx  LootVault.tsx  MintButton.tsx  Navbar.tsx  NftGallery.tsx  NotificationBell.tsx  NotificationSentry.tsx  PlinkoGame.tsx  PulseHunter.tsx  RaffleHistory.tsx  RaffleLobby.tsx  RaffleRefundSection.tsx  RankUpModal.tsx  ResistanceMode.tsx  RewardDashboard.tsx  SeekerGuard.tsx  ShooterContainer.tsx  Shop.tsx  Sidebar.tsx  SpinGame.tsx  Swap.tsx  ThuggerGrand.tsx  ThuggerGrandBullet.tsx  ThuggerGrandCharacterModel.tsx  (+3 more)
src/config/: tokens.ts
src/game/: EventBus.ts  (+1 more)
(+3184 files in other folders)
