[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# This 'git' source bypasses the "same source" error and fixes the Edition 2024 bug
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", rev = "da90226" }